cabal-version:       2.4

name:                code
version:             0.1.0.0
author:              myuon
maintainer:          ioi.joi.koi.loi@gmail.com

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
  -- hs-source-dirs:
  default-language:    Haskell2010
