cabal-version:       2.4

name:                code
version:             0.1.0.0
author:              myuon
maintainer:          ioi.joi.koi.loi@gmail.com

library
  exposed-modules:
    QuickSort
  -- other-modules:
  -- other-extensions:
  build-depends:
    base ^>=4.12.0.0,
    bytestring,
    vector,
  hs-source-dirs:      vector
  default-language:    Haskell2010
  default-extensions:
    BangPatterns

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  build-tool-depends:
    tasty-discover:tasty-discover >= 4.2 && < 4.3,
  build-depends:
    base,
    code,
    mwc-random,
    tasty,
    tasty-hspec,
    vector,
  hs-source-dirs:      test
  default-language:    Haskell2010
